--- a/README
+++ b/README
@@ -1,1 +1,5 @@
 Tools to analyse performance test results and monitoring data 
+
+
+This project is not maintained anymore. 
+Please check [Ptang](https://github.com/cfalguiere/Ptang)
